// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot when status is Completed 1`] = `
<div>
  <div
    class=""
    title="Completed"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-check SuccessIcon__ColoredIcon-sc-j6z8ag-0 ilzEtG"
      data-icon="circle-check"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`matches the snapshot when status is Error 1`] = `
<div>
  <div
    class=""
    title="Error"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle-exclamation ErrorIcon__ColoredIcon-sc-1n9o5bs-0 zehQF"
      data-icon="circle-exclamation"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zm32 224c0 17.7-14.3 32-32 32s-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`matches the snapshot when status is Processing 1`] = `
<div>
  <div
    class=""
    title="Processing"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;
